Made several stylistic and textual changes, hopefully for the better.

--- a/theme/WSH.css
+++ b/theme/WSH.css
@@ -96,6 +96,11 @@ h2.silents
     font-style: italic;
     color: #FF6600;
 }
+p.silents
+{
+    text-align: left;
+    color: #FF6600;
+}
 #silentsleftthird {
 	color: #009900;
 	float:left;
